# pe-rs-ist

./: .gitignore  Cargo.toml  README.md  tweets.toml
per-backend/: Cargo.toml
per-backend/src/: endpoints.rs  main.rs  tweet.rs
per-bot/: Cargo.toml  tweets.toml
per-bot/src/: auth.rs  error.rs  main.rs  opts.rs  tweets.rs
per-bot/src/handlers/: mod.rs  redis.rs  tweet.rs
per-frontend/: Cargo.toml
per-frontend/src/: lib.rs  tweet.rs
src/: auth.rs  main.rs  tweets.rs
