[package]
name = "twithesis"
version = "0.1.0"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.15"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.6"
serde = {version = "1.0", features=["derive"]}