[package]
name = "per-backend"
version = "0.1.0"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
tokio = { version = "0.2", features = ["full"] }
redis = "0.17.0"
serde = {version = "1.0", features=["derive"]}
