[package]
name = "per-backend"
version = "0.1.0"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
edition = "2018"

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
tokio = { version = "0.2", features = ["full"] }
redis = "0.17.0"
serde = {version = "1.0", features=["derive"]}
log = "0.4.0"
env_logger = "0.7.1"