[package]
name = "pe-rs-ist"
version = "0.1.0"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.15"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.6"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
clap = "3.0.0-beta.1"
anyhow = "1.0.32"
thiserror = "1.0.20"
redis = "0.17.0"
